# pseudo-electroics

./: .bandit  .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  docker-entrypoint.sh  manage.py  pyproject.toml
accounts/: admin.py  forms.py  models.py  roles.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: create.html  detail.html  employee-list.html  list.html  lock.html  login.html  profile-create.html  profile-lock.html  profile-reset-password.html  profile-update.html  reset-password.html  update.html
inventory/: admin.py  models.py  signals.py  urls.py  views.py
inventory/fixtures/: fixtures.yaml
inventory/migrations/: 0001_initial.py
inventory/templates/inventory/: inventory-deliveries.html  inventory-delivery-add.html  list.html
inventory/templates/inventory/receiving/: create.html  list.html
orders/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
orders/fixtures/: fixtures.yaml
orders/migrations/: 0001_initial.py
orders/templates/orders/: base.html  create.html  customer-list.html  delete.html  list.html  order-list.html  orders-add.html  orders-delete.html  orders-update.html  update.html
orders/templates/orders/customers/: list.html
pseudo/: asgi.py  settings.py  urls.py  wsgi.py
pseudo/templates/: base.html
sms/: settings.py  urls.py
sms/templates/: base.html
tests/: test_pseudo.py  test_sms.py
